testdata/baselines/reference/submodule/compiler/typeReferenceDirectives8.errors.txt
/mod1.ts(1,24): error TS2304: Cannot find name 'Lib'.


==== /mod2.ts (0 errors) ====
    import {foo} from "./mod1";
    export const bar = foo();
==== /types/lib/index.d.ts (0 errors) ====
    interface Lib { x }
    
==== /mod1.ts (1 errors) ====
    export function foo(): Lib { return {x: 1} }
                           ~~~
!!! error TS2304: Cannot find name 'Lib'.
    